--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 
     <div class="card">
       <img src="https://via.placeholder.com/400x300">
-      <h3>Producto de ejemplo</h3>
-      <p>Descripción corta del producto.</p>
-      <div class="price">$000.000</div>
+      <h3>Cinturon masajeador termico recargable</h3>
+      <p>Este masajeador eléctrico con función de calor es tu nuevo aliado para brindar sensación de alivio y bienestar en la zona abdominal y lumbar. Ideal para usar en casa, en la oficina o mientras te relajas.
+.</p>
+      <div class="price">$60.000</div>
       <a class="btn" href="https://wa.me/573145251694" target="_blank">
         Comprar por WhatsApp
       </a>
