--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="products">
 
     <div class="card">
-      <img src="https://via.placeholder.com/400x300">
+      <img src="img/cinturon.jpg">
       <h3>Cinturon masajeador termico recargable</h3>
       <p>Este masajeador eléctrico con función de calor es tu nuevo aliado para brindar sensación de alivio y bienestar en la zona abdominal y lumbar. Ideal para usar en casa, en la oficina o mientras te relajas.
 .</p>
