--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     }
 
     header {
+      <div style="padding:20px; text-align:center;">
+  <input
+    type="text"
+    id="searchInput"
+    placeholder="Buscar productos..."
+    style="
+      width: 100%;
+      max-width: 400px;
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
+    "
+    onkeyup="searchProducts()"
+  >
+</div>
+
       background: linear-gradient(135deg, #ff0057, #7f00ff);
       padding: 30px;
       text-align: center;
