--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
       font-family: Arial, Helvetica, sans-serif;
       background: #0f0f0f;
       color: white;
+      /* Animación de entrada general */
+.fade-in {
+  animation: fadeIn 0.8s ease-in-out;
+  .card {
+  background: #1c1c1c;
+  padding: 15px;
+  border-radius: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+    .card:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 15px 30px rgba(0,0,0,0.6);
+}
+
+}
+
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
     }
 
     header {
@@ -163,5 +191,5 @@ function filterCategory(category) {
 }
 </script>
 
-</body>
+<body class="fade-in">
 </html>
