--- a/index.html
+++ b/index.html
@@ -1,243 +1,210 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pinnxon</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pinnxon | Tienda Oficial</title>
 
-  <style>
-    /* =======================
-       ESTILOS GENERALES
-    ======================= */
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f0f0f;
-      color: white;
-      animation: fadeIn 0.8s ease-in-out;
-    }
+<style>
+:root {
+  --bg: #0e0e11;
+  --card: #16161c;
+  --accent: #8b5cf6;
+  --text: #ffffff;
+  --muted: #9ca3af;
+}
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(15px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+* {
+  box-sizing: border-box;
+  font-family: 'Segoe UI', system-ui, sans-serif;
+}
 
-    header {
-      background: linear-gradient(135deg, #ff0057, #7f00ff);
-      padding: 30px;
-      text-align: center;
-    }
+body {
+  margin: 0;
+  background: radial-gradient(circle at top, #1b1b29, var(--bg));
+  color: var(--text);
+}
 
-    /* =======================
-       BANNER
-    ======================= */
-    section.banner {
-      background: url('https://via.placeholder.com/1200x400') center/cover;
-      padding: 60px 20px;
-      text-align: center;
-      animation: fadeIn 1s ease-in-out;
-    }
+/* HEADER */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  backdrop-filter: blur(10px);
+  background: rgba(14,14,17,.7);
+  border-bottom: 1px solid rgba(255,255,255,.05);
+}
 
-    /* =======================
-       CONTENEDORES
-    ======================= */
-    .container {
-      padding: 30px;
-      max-width: 1200px;
-      margin: auto;
-    }
+.nav {
+  max-width: 1200px;
+  margin: auto;
+  padding: 16px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
+.logo {
+  font-size: 1.6rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
 
-    /* =======================
-       TARJETAS DE PRODUCTO
-    ======================= */
-    .card {
-      background: #1c1c1c;
-      padding: 15px;
-      border-radius: 15px;
-      animation: productFade 0.6s ease-in-out;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+.logo span {
+  color: var(--accent);
+}
 
-    .card:hover {
-      transform: translateY(-10px) scale(1.02);
-      box-shadow: 0 15px 30px rgba(0,0,0,0.6);
-    }
+/* HERO */
+.hero {
+  text-align: center;
+  padding: 90px 20px 60px;
+  animation: fadeUp 1s ease;
+}
 
-    @keyframes productFade {
-      from {
-        opacity: 0;
-        transform: scale(0.96);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
+.hero h1 {
+  font-size: clamp(2.2rem, 5vw, 3.5rem);
+  margin-bottom: 10px;
+}
 
-    .card img {
-      width: 100%;
-      border-radius: 10px;
-    }
+.hero p {
+  max-width: 600px;
+  margin: auto;
+  color: var(--muted);
+  font-size: 1.05rem;
+}
 
-    .price {
-      color: #00ffae;
-      font-weight: bold;
-      margin: 10px 0;
-    }
+/* GRID */
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 30px 20px 80px;
+}
 
-    /* =======================
-       BOTONES
-    ======================= */
-    .btn {
-      display: block;
-      background: #25D366;
-      color: black;
-      text-align: center;
-      padding: 10px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: transform 0.2s ease, background 0.2s ease;
-    }
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 26px;
+}
 
-    .btn:hover {
-      transform: scale(1.05);
-      background: #1ebe5d;
-    }
+/* CARD */
+.card {
+  background: linear-gradient(180deg, #1c1c25, var(--card));
+  border-radius: 18px;
+  overflow: hidden;
+  box-shadow: 0 20px 40px rgba(0,0,0,.4);
+  transform: translateY(30px);
+  opacity: 0;
+  animation: show 0.7s ease forwards;
+}
 
-    button {
-      padding: 8px 14px;
-      margin: 5px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
+.card:hover {
+  transform: translateY(-6px) scale(1.02);
+  transition: .3s ease;
+}
 
-    /* =======================
-       WHATSAPP FLOTANTE
-    ======================= */
-    .whatsapp {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25D366;
-      padding: 15px;
-      border-radius: 50%;
-      text-decoration: none;
-      font-size: 20px;
-      color: black;
-      animation: pulse 2s infinite;
-    }
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
-    }
+.card-body {
+  padding: 18px;
+}
 
-    /* =======================
-       FOOTER
-    ======================= */
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 12px;
-      opacity: 0.6;
-    }
-  </style>
+.card h3 {
+  margin: 0 0 8px;
+  font-size: 1.15rem;
+}
+
+.card p {
+  color: var(--muted);
+  font-size: .95rem;
+  min-height: 40px;
+}
+
+.price {
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin: 14px 0;
+}
+
+.btn {
+  display: block;
+  text-align: center;
+  padding: 12px;
+  border-radius: 12px;
+  background: linear-gradient(135deg, var(--accent), #6d28d9);
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  transition: .3s;
+}
+
+.btn:hover {
+  box-shadow: 0 0 20px rgba(139,92,246,.6);
+  transform: translateY(-2px);
+}
+
+/* FOOTER */
+footer {
+  text-align: center;
+  padding: 30px 20px;
+  color: var(--muted);
+  border-top: 1px solid rgba(255,255,255,.05);
+}
+
+/* ANIMATIONS */
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes show {
+  to { opacity: 1; transform: translateY(0); }
+}
+</style>
 </head>
 
 <body>
 
 <header>
-  <h1>Pinnxon</h1>
-  <p>Tu tienda online de productos seleccionados</p>
+  <div class="nav">
+    <div class="logo">Pinn<span>x</span>on</div>
+  </div>
 </header>
 
-<section class="banner">
-  <h2 style="font-size: 2rem;">Descubre productos increíbles</h2>
-  <p>Compra fácil y rápido por WhatsApp</p>
+<section class="hero">
+  <h1>Productos seleccionados para ti</h1>
+  <p>Calidad, estilo y confianza. Compra fácil y directa por WhatsApp.</p>
 </section>
 
-<div style="padding: 20px; text-align: center;">
-  <input
-    type="text"
-    id="searchInput"
-    placeholder="Buscar productos..."
-    onkeyup="searchProducts()"
-    style="width:100%; max-width:400px; padding:12px; border-radius:10px; border:none; font-size:16px;"
-  >
-</div>
-
-<div style="text-align:center; margin-bottom:20px;">
-  <button onclick="filterCategory('all')">Todos</button>
-  <button onclick="filterCategory('tecnologia')">Tecnología</button>
-  <button onclick="filterCategory('hogar')">Hogar</button>
-  <button onclick="filterCategory('moda')">Moda</button>
-</div>
-
-<div class="container">
+<section class="container">
   <div class="products">
 
-    <div class="card" data-category="hogar">
-      <img src="img/cinturon.jpg" alt="Cinturón masajeador">
-      <h3>Cinturón masajeador térmico recargable</h3>
-      <p>
-        Masajeador eléctrico con función de calor, ideal para aliviar la zona
-        abdominal y lumbar. Úsalo en casa, oficina o descanso.
-      </p>
-      <div class="price">$60.000</div>
-      <a class="btn" href="https://wa.me/573145251694" target="_blank">
-        Comprar por WhatsApp
-      </a>
+    <!-- PRODUCTO -->
+    <div class="card">
+      <img src="https://via.placeholder.com/600x400">
+      <div class="card-body">
+        <h3>Producto Premium</h3>
+        <p>Descripción corta y clara del producto.</p>
+        <div class="price">$150.000</div>
+        <a class="btn" href="https://wa.me/57TU_NUMERO" target="_blank">
+          Comprar por WhatsApp
+        </a>
+      </div>
     </div>
 
-  </div>
-</div>
+    <!-- COPIA DESDE AQUÍ PARA MÁS PRODUCTOS -->
 
-<a class="whatsapp" href="https://wa.me/573145251694" target="_blank">💬</a>
+  </div>
+</section>
 
 <footer>
-  Pinnxon es un intermediario. Los productos son ofrecidos por terceros.
+  © 2025 Pinnxon — Compra inteligente
 </footer>
-
-<script>
-function searchProducts() {
-  let input = document.getElementById("searchInput").value.toLowerCase();
-  let cards = document.querySelectorAll(".card");
-
-  cards.forEach(card => {
-    card.style.display = card.innerText.toLowerCase().includes(input)
-      ? "block"
-      : "none";
-  });
-}
-
-function filterCategory(category) {
-  let cards = document.querySelectorAll(".card");
-
-  cards.forEach(card => {
-    let cat = card.getAttribute("data-category");
-    card.style.display = (category === "all" || cat === category)
-      ? "block"
-      : "none";
-  });
-}
-</script>
 
 </body>
 </html>
+
 
