--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@ footer {
 
     <!-- PRODUCTO -->
     <div class="card">
-      <img src="https://via.placeholder.com/600x400">
-      <div class="card-body">
-        <h3>Producto Premium</h3>
-        <p>Descripción corta y clara del producto.</p>
-        <div class="price">$150.000</div>
-        <a class="btn" href="https://wa.me/57TU_NUMERO" target="_blank">
+      <img src="img/cinturon.jpg/300x200">
+        <div class="card-body">
+        <h3>Cinturon masajeador termico</h3>
+        <p>Este masajeador eléctrico con función de calor es tu nuevo aliado para brindar sensación de alivio y bienestar en la zona abdominal y lumbar. Ideal para usar en casa, en la oficina o mientras te relajas..</p>
+        <div class="price">$60.000</div>
+        <a class="btn" href="https://wa.me/573145251694" target="_blank">
           Comprar por WhatsApp
         </a>
       </div>
