--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ footer {
 
     <!-- PRODUCTO -->
     <div class="card">
-      <img src="img/cinturon.jpg/300x200">
+      <img src="img/cinturon.jpg">
         <div class="card-body">
         <h3>Cinturon masajeador termico</h3>
         <p>Este masajeador eléctrico con función de calor es tu nuevo aliado para brindar sensación de alivio y bienestar en la zona abdominal y lumbar. Ideal para usar en casa, en la oficina o mientras te relajas..</p>
