--- a/index.html
+++ b/index.html
@@ -189,9 +189,11 @@ footer {
         <h3>Cinturon masajeador termico</h3>
         <p>Este masajeador eléctrico con función de calor es tu nuevo aliado para brindar sensación de alivio y bienestar en la zona abdominal y lumbar. Ideal para usar en casa, en la oficina o mientras te relajas..</p>
         <div class="price">$60.000</div>
-        <a class="btn" href="https://wa.me/573145251694" target="_blank">
-          Comprar por WhatsApp
-        </a>
+        <a class="btn"
+   href="https://wa.me/573145251694?text=Hola%20Pinnxon,%20estoy%20interesado%20en%20el%20Cinturon%20masajeador%20termico.%20Me%20puedes%20dar%20mas%20informacion?"
+   target="_blank">
+  Comprar por WhatsApp
+</a>
       </div>
     </div>
 
